// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Autocomplete /> handles layout classes 1`] = `
<div>
  <div
    class="input-field col s4 m6"
  >
    <input
      class="autocomplete"
      id="Autocomplete-mockId"
      type="text"
    />
    <label
      for="Autocomplete-mockId"
    />
  </div>
</div>
`;

exports[`<Autocomplete /> renders 1`] = `
<div>
  <div
    class="input-field col"
  >
    <input
      class="autocomplete"
      id="testAutocompleteId"
      type="text"
    />
    <label
      for="testAutocompleteId"
    >
      Test Title
    </label>
  </div>
</div>
`;
